examples/focus-queue/tests/snapshots/focus_queue__focus_queue_edit_dialog.snap
---
source: examples/focus-queue/tests/focus_queue.rs
expression: task.frame()
---
                                                            
                                                            
                                                            
      ┌ Edit task ───────────────────────────────────┐      
      │                                              │      
      │ Title                                        │      
      │                                              │      
      │ Write pilot notes                            │      
      │                                              │      
      │ [x] Completed                                │      
      │                                              │      
      │                                 Save  Cancel │      
      │                                              │      
      └──────────────────────────────────────────────┘
