examples/focus-queue/tests/snapshots/focus_queue__focus_queue_empty.snap
---
source: examples/focus-queue/tests/focus_queue.rs
expression: empty.frame()
---
┌ New task ────────────────────────────────────────────────┐
│                                                       Add│
└──────────────────────────────────────────────────────────┘
                                                            
┌ Focus queue ─────────────────────────────────────────────┐
│No tasks yet. Type one above and press Enter.             │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
                                                            
┌ Focus timer ─────────────────────────────────────────────┐
│25:00  0 open / 0 complete    Start  Reset                │
└──────────────────────────────────────────────────────────┘
                                                            
[Queue] Activity             Tab focus | Enter activate Quit
