examples/focus-queue/tests/snapshots/focus_queue__focus_queue_scrolled.snap
---
source: examples/focus-queue/tests/focus_queue.rs
expression: scrolled.frame()
---
┌ New task ────────────────────────────────────────────────┐
│                                                       Add│
└──────────────────────────────────────────────────────────┘
                                                            
┌ Focus queue ─────────────────────────────────────────────┐
│[ ] Task 3                                     Edit Delete│
│[ ] Task 4                                     Edit Delete│
│[ ] Task 5                                     Edit Delete│
│[ ] Task 6                                     Edit Delete│
└──────────────────────────────────────────────────────────┘
                                                            
┌ Focus timer ─────────────────────────────────────────────┐
│25:00  8 open / 0 complete    Start  Reset                │
└──────────────────────────────────────────────────────────┘
                                                            
Tab focus | Enter activate | Wheel scroll               Quit
