examples/focus-queue/tests/snapshots/focus_queue__focus_queue_task_added.snap
---
source: examples/focus-queue/tests/focus_queue.rs
expression: task.frame()
---
┌ New task ────────────────────────────────────────────────┐
│                                                       Add│
└──────────────────────────────────────────────────────────┘
                                                            
┌ Focus queue ─────────────────────────────────────────────┐
│[ ] Write pilot notes                          Edit Delete│
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
                                                            
┌ Focus timer ─────────────────────────────────────────────┐
│25:00  1 open / 0 complete    Start  Reset                │
└──────────────────────────────────────────────────────────┘
                                                            
[Queue] Activity             Tab focus | Enter activate Quit
