examples/focus-queue/tests/snapshots/focus_queue__focus_queue_task_completed.snap
---
source: examples/focus-queue/tests/focus_queue.rs
expression: task.frame()
---
┌ New task ────────────────────────────────────────────────┐
│                                                       Add│
└──────────────────────────────────────────────────────────┘
                                                            
┌ Focus queue ─────────────────────────────────────────────┐
│[x] Write pilot notes                          Edit Delete│
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
                                                            
┌ Focus timer ─────────────────────────────────────────────┐
│25:00  0 open / 1 complete    Start  Reset                │
└──────────────────────────────────────────────────────────┘
                                                            
[Queue] Activity             Tab focus | Enter activate Quit
