examples/focus-queue/tests/snapshots/focus_queue__focus_queue_unicode_saved.snap
---
source: examples/focus-queue/tests/focus_queue.rs
expression: app.frame()
---
┌ New task ────────────────────────────────────────────────────────────┐
│                                                                   Add│
└──────────────────────────────────────────────────────────────────────┘
                                                                        
┌ Focus queue ─────────────────────────────────────────────────────────┐
│[x] a界                                                    Edit Delete│
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
└──────────────────────────────────────────────────────────────────────┘
                                                                        
┌ Focus timer ─────────────────────────────────────────────────────────┐
│25:00  0 open / 1 complete    Start  Reset                            │
└──────────────────────────────────────────────────────────────────────┘
                                                                        
[Queue] Activity                         Tab focus | Enter activate Quit
